--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -15,6 +15,6 @@
     <label>パスワード: <input name="password" type="password" required></label><br>
     <button type="submit">登録</button>
   </form>
-  <p><a href="{{ url_for('login') }}">ログイン</a></p>
+  <p><a href="{{ url_for('main.login') }}">ログイン</a></p>
 </body>
 </html>
