--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -262,7 +262,7 @@
 <div class="container">
 <div class="green-box">
   <a href="#" id="helloBtn" data-desc="*こんにちは">Hello</a>
-  <a href="/temp" data-desc="*仮">kari</a>
+  <a href="/kari" data-desc="*仮">kari</a>
   <a href="#" id="doubleBtn" data-desc="*心理ゲーム-DOUBLE MINE-">DOUBLE MINE</a>
   <a href="/login" data-desc="*アーカイブ">Archive</a>
   <a href="/other" data-desc="*その他">other</a>
