Add package.json for Render deploy

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -248,14 +248,14 @@
   </style>
 
 <div class="main-text">
-    西暦 <span class="year">2025</span> 年
+    <span class="year">(´・ω・｀)</span>ショボーン
   </div>
   <div class="sub-text">
-    IN THE YEAR 2025
+  
   </div>
   <div class="jp-sub">
-    (Exordium & Terminus)<br>
-    ゼーガーとエバンズ
+    <br>
+    
   </div>
 <p>
 
