--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -248,7 +248,7 @@
   </style>
 
 <div class="main-text">
-    <span class="year">(´・ω・｀)</span>ショボーン
+    <span class="year"></span>ショボーン
   </div>
   <div class="sub-text">
   
@@ -281,6 +281,7 @@
 <div class="hello-box" id="helloBox">
   Hello
 </div>
+<!--
 <div class="rotate-move">
 <div class="rotate-box">
   <img src="/static/images/sky.gif" alt="GIF">
@@ -295,6 +296,7 @@
  <img src="/static/images/america2.gif" alt="サンプルGIF2">
 </div>
 
+-->
 
 <div class="doubleMine-box" id="doubleBox">
   Double MINE <br>
