--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -248,7 +248,7 @@
   </style>
 
 <div class="main-text">
-    <span class="year"></span>ショボーン
+    <span class="year"></span>my site
   </div>
   <div class="sub-text">
   
@@ -262,9 +262,9 @@
 <div class="container">
 <div class="green-box">
   <a href="#" id="helloBtn" data-desc="*こんにちは">Hello</a>
-  <a href="https://shitinarabe.onrender.com/" data-desc="*仮">七並べオンライン</a>
+  <a href="https://shitinarabe.onrender.com/" data-desc="*七並べをオンラインで">七並べONLINE</a>
   <a href="#" id="doubleBtn" data-desc="*心理ゲーム-DOUBLE MINE-">DOUBLE MINE</a>
-  <a href="/login" data-desc="*アーカイブ">Archive</a>
+  <a href="/Archive" data-desc="*アーカイブ">Archive</a>
   <a href="/other" data-desc="*その他">other</a>
 
 </div>
@@ -275,7 +275,7 @@
 </p>
 
 <div class="red-box">
-  welcome to my site
+  *welcome to my site
 </div>
 
 <div class="hello-box" id="helloBox">
