--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -265,7 +265,7 @@
   <a href="https://shitinarabe.onrender.com/" data-desc="*七並べをオンラインで">七並べONLINE</a>
   <a href="#" id="doubleBtn" data-desc="*心理ゲーム-DOUBLE MINE-">DOUBLE MINE</a>
   <a href="/Archive" data-desc="*アーカイブ">Archive</a>
-  <a href="/other" data-desc="*その他">other</a>
+  <a href="/kari" data-desc="*その他">other</a>
 
 </div>
 <div class="blue-box" id="desc-box">
